--- a/client/src/app/account/comments/comments.tpl.html
+++ b/client/src/app/account/comments/comments.tpl.html
@@ -1,3 +1,11 @@
 <div class="audio">
     
 </div>
+
+<div class="comments">
+	<form name="detailForm">
+		<textarea placeholder="Write your comment", ng-model="comment">
+		</textarea>
+		<button type="button" class="btn btn-primary btn-update" ng-click="submit()">Add</button>
+	</form>
+</div>
