Notni listove opraveni/bez zaqvka/

--- a/client/src/app/account/sheetMusic/sheetMusic.tpl.html
+++ b/client/src/app/account/sheetMusic/sheetMusic.tpl.html
@@ -1,3 +1,2 @@
-
-<script src='vexflow-min.js'></script>>
-<canvas width = '50%' height = '50%	'>
+<script type="text/javascript" src='vexflow-min.js'></script>
+<canvas width='10' height='10'>
