--- a/client/src/app/account/comments/comments.tpl.html
+++ b/client/src/app/account/comments/comments.tpl.html
@@ -1,11 +1,3 @@
-<div class="audio">
-    
-</div>
 
-<div class="comments">
-	<form name="detailForm">
-		<textarea placeholder="Write your comment", ng-model="comment">
-		</textarea>
-		<button type="button" class="btn btn-primary btn-update" ng-click="submit()">Add</button>
-	</form>
-</div>
+<button ng-audio="./comments/night.mp3" volume="0.5" start="0.2">Click me</button>
+
