--- a/client/src/app/admin/administrators/admin-administrators.tpl.html
+++ b/client/src/app/admin/administrators/admin-administrators.tpl.html
@@ -1,13 +1,7 @@
-<div class="row" id="admin-administrators-index">
+<div class="row" id="records-index">
     <div class="col-xs-12">
         <div class="page-header">
-            <form class="form-inline pull-right" name="addAdminForm">
-                <div class="input-group">
-                    <input name="name" type="text" placeholder="enter a name" class="form-control" ng-model="fullname" required>
-                    <button type="button" class="btn btn-primary" ng-disabled="!canSave(addAdminForm)" ng-click="addAdmin()">Add New</button>
-                </div>
-            </form>
-            <h1>Administrators</h1>
+            <h1>Records</h1>
         </div>
         <form class="filters">
             <div class="row">
