--- a/client/src/app/account/sheetMusic/sheetMusic.tpl.html
+++ b/client/src/app/account/sheetMusic/sheetMusic.tpl.html
@@ -1,3 +1,18 @@
 
 <script type="text/javascript" src='vexflow-min.js'></script>
-<canvas width='10' height='10'>
+<canvas  style="" width='10' height='10'>
+	Your browser does not support canvas!
+</canvas>
+<!--ng-if="pages.total > 1" ng-class="{disabled: !pages.hasPrev}" ng-class="{disabled: !pages.hasNext}" -->
+	<div class="well">
+        <div class="btn-group pull-left">
+            <button disabled class="btn btn-default">Page {{pages.current}} of {{pages.total}}</button>
+            <button disabled class="btn btn-default">Rows {{items.begin}} - {{items.end}} of {{items.total}}</button>
+        </div>
+        <div class="btn-group pull-right">
+            <button class="btn btn-default"  ng-click="prev()">Prev</button>
+            <button class="btn btn-default"  ng-click="next()"> Next</button>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+	
