--- a/client/src/app/account/comments/comments.tpl.html
+++ b/client/src/app/account/comments/comments.tpl.html
@@ -1,3 +1,15 @@
+<div class="comments">
+        <form name="detailForm">
+                <textarea placeholder="Write your comment", ng-model="comment" style"resize: none">
+                </textarea>
+                <button type="button" class="btn btn-primary btn-update" ng-click="submit()">Add</button>
+        </form>
 
-<button ng-audio="./comments/night.mp3" volume="0.5" start="0.2">Click me</button>
+        <div ng-repeat="comment in comments">
+        	<textarea readonly ng-bind="comment.content" ng-class="{disabled: false}"></textarea>
+        </div>
+</div>
+<div class="sheetMusicButton">
+	<a class="btn btn-default btn-sm" ng-click="redirect()">sheetMusic</a>
+</div>
 
