--- a/client/src/app/account/sheetMusic/sheetMusic.tpl.html
+++ b/client/src/app/account/sheetMusic/sheetMusic.tpl.html
@@ -1,8 +1,11 @@
 
 <script type="text/javascript" src='vexflow-min.js'></script>
-<canvas  style="" width='10' height='10'>
-	Your browser does not support canvas!
-</canvas>
+<script type="text/javascript" src='http://www.vexflow.com/support/raphael.js'></script>
+<div scale="0.5">
+    <canvas scale="1" width='10' height='10'>
+    	Your browser does not support canvas!
+    </canvas>
+</div>
 <!--ng-if="pages.total > 1" ng-class="{disabled: !pages.hasPrev}" ng-class="{disabled: !pages.hasNext}" -->
 	<div class="well">
         <div class="btn-group pull-left">
@@ -10,8 +13,8 @@
             <button disabled class="btn btn-default">Rows {{items.begin}} - {{items.end}} of {{items.total}}</button>
         </div>
         <div class="btn-group pull-right">
-            <button class="btn btn-default"  ng-click="prev()">Prev</button>
-            <button class="btn btn-default"  ng-click="next()"> Next</button>
+            <button ng-class="{{disable:reachFirst()}}" class="btn btn-default"  ng-click="prev()">Prev</button>
+            <button ng-class="{{disable:reachLast()}}" class="btn btn-default"  ng-click="next()"> Next</button>
         </div>
         <div class="clearfix"></div>
     </div>
