--- a/client/src/app/account/comments/comments.tpl.html
+++ b/client/src/app/account/comments/comments.tpl.html
@@ -1,3 +1,5 @@
+<audio controls  ng-src={{songName}}></audio>
+
 <div class="comments">
         <form name="detailForm">
                 <textarea placeholder="Write your comment", ng-model="comment" style"resize: none">
