--- a/client/src/app/account/sheetMusic/sheetMusic.tpl.html
+++ b/client/src/app/account/sheetMusic/sheetMusic.tpl.html
@@ -13,8 +13,8 @@
             <button disabled class="btn btn-default">Rows {{items.begin}} - {{items.end}} of {{items.total}}</button>
         </div>
         <div class="btn-group pull-right">
-            <button ng-class="{{disable:reachFirst()}}" class="btn btn-default"  ng-click="prev()">Prev</button>
-            <button ng-class="{{disable:reachLast()}}" class="btn btn-default"  ng-click="next()"> Next</button>
+            <button class="btn btn-default"  ng-click="prev()">Prev</button>
+            <button class="btn btn-default"  ng-click="next()"> Next</button>
         </div>
         <div class="clearfix"></div>
     </div>
