--- a/client/src/app/account/generate/generate.tpl.html
+++ b/client/src/app/account/generate/generate.tpl.html
@@ -1,5 +1,5 @@
 
-<form>
+<form id="commentform">
 	<button type="button" class="btn btn-primary btn-update" ng-click="submit()">SUBMIT</button>
 </form>
 
